@@ -22,6 +22,7 @@
 #include "../SignalHandler.hh"
 
 #include <iostream>
+#include <cassert>
 
 using namespace std;
 using namespace FbTk;
